@@ -61,7 +61,7 @@ set JAVA_HOME=%JAVA_HOME:"=%
 @rem       %%~sI       -  expanded path contains short names only
 @rem                     (see description at https://stackoverflow.com/questions/1333589/how-do-i-transform-the-working-directory-into-a-8-3-short-file-name-using-batch?answertab=active#tab-top)
 @rem
-@rem %%..1 or %%..I in the above example, refers to the input parameter (whole string) to 'for'
+@rem %%..1 or %%..I in the above example                                                                                                                                                                                                                                                                                                                                                                , refers to the input parameter (whole string) to 'for'
 @rem Note: in a batch script we need to use %% instead of just % as per the docs.
 
 for %%f in ("%JAVA_HOME%") do set JAVA_HOME=%%~sf
@@ -112,6 +112,7 @@ set PARAM_CONFIG_FILE=--config %APP_HOME%\config\credentials.config
 set PARAM_STORE_DIR=--store %APP_HOME%\record\localstore
 set PARAM_SOURCECODE_DIR=--sourcecode %APP_HOME%
 
+%JAVA_EXE% -version
 @echo on
 for /f "tokens=3" %%g in ('%JAVA_EXE% -version 2^>^&1 ^| findstr /i "version"') do (
     set JAVA_FULL_VERSION=%%g
@@ -129,11 +130,11 @@ if defined JAVA_FULL_VERSION (
 echo.
 echo JAVA_FULL_VERSION=%JAVA_FULL_VERSION%
 
-@rem Look for tokens "9, "10, "11 or "12 in the Java version string, 
+@rem Look for tokens "9, "10, "11 or "12 in the Java version string,
 @rem if found, return the whole Java String, otherwise return empty string
 @rem
 @rem For e.g.
-@rem   --version command output    JAVA_VERSION   
+@rem   --version command output    JAVA_VERSION
 @rem   ========================   ==============
 @rem   java version "1.8.0_172"     <no output>
 @rem   java version "9.0.1"            "9
@@ -153,7 +154,7 @@ for /f "delims=. tokens=1-3" %%v in ("%JAVA_FULL_VERSION%") do (
 @rem only the digits before it are returned
 @rem
 @rem For e.g.
-@rem   JAVA_VERSION   JAVA_VERSION_INT_VALUE   
+@rem   JAVA_VERSION   JAVA_VERSION_INT_VALUE
 @rem   ============   ======================
 @rem    <no output>         <no output>
 @rem         9                  9
@@ -161,9 +162,9 @@ for /f "delims=. tokens=1-3" %%v in ("%JAVA_FULL_VERSION%") do (
 @rem        11                  11
 @rem       12-ea                12
 @rem
-@rem The for loop below iterates through tokens, 
+@rem The for loop below iterates through tokens,
 @rem tokens are separated by the delimeter provided to 'delim'
-@rem Only the first token is retained, and as per the above table, 
+@rem Only the first token is retained, and as per the above table,
 @rem it will always be empty or a numeric value between 9 and 12 (included)
 for /f "tokens=1,2 delims=-" %%a in ("%JAVA_VERSION%") do (
   set JAVA_VERSION_INT_VALUE=%%a
@@ -171,18 +172,8 @@ for /f "tokens=1,2 delims=-" %%a in ("%JAVA_VERSION%") do (
 
 echo.
 echo JAVA_VERSION=%JAVA_VERSION_INT_VALUE%
-
-set JAVA_VERSION_9=9
-
-if %JAVA_VERSION_INT_VALUE% lss %JAVA_VERSION_9% (
-   echo "--- Pre-Java 9 detected ---"
-   echo "Using DEFAULT_JVM_OPTS variable with value '%DEFAULT_JVM_OPTS%'"
-) else (
-   echo "--- Java 9 or higher detected (version %JAVA_VERSION_INT_VALUE%) ---"
-   set DEFAULT_JVM_OPTS=--illegal-access=warn --add-modules=java.xml.bind,java.activation %DEFAULT_JVM_OPTS%
-   echo "Adding JVM args to the DEFAULT_JVM_OPTS variable, new value set to '%DEFAULT_JVM_OPTS%'"
-   echo "--------------------------------------------------------------------------------------------------------------"
-)
+echo "Using DEFAULT_JVM_OPTS variable with value '%DEFAULT_JVM_OPTS%'"
+echo "--------------------------------------------------------------------------------------------------------------"
 
 @echo on
 @rem Execute Record
